--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -142,11 +142,17 @@
   padding: 20px var(--page-inline-padding);
   flex-direction: column;
   margin-bottom: 60px;
+  content-visibility: auto;
+  contain-intrinsic-size: 0 2400px;
   app-work-card {
     margin-bottom: 80px;
     &:last-child {
       margin-bottom: 0;
     }
+    &:nth-child(1) { animation-delay: 0.05s; }
+    &:nth-child(2) { animation-delay: 0.15s; }
+    &:nth-child(3) { animation-delay: 0.25s; }
+    &:nth-child(4) { animation-delay: 0.35s; }
   }
   @media (max-width: 680px) {
     margin-bottom: 40px;
